Commit modficiacion html y css

--- a/blockhost.html
+++ b/blockhost.html
@@ -8,7 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, ea earum. Sequi eaque doloribus libero molestiae culpa sunt deserunt harum iure rerum, distinctio dignissimos, adipisci veniam consequuntur tempora quisquam corporis.</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el título atractivo e interesante</h1>
+            <p>Y este es un parrafo de inicio</p>
+        </div>
+    </div>
 </body>
 </html>
