Agregado parrafo y tipografia

--- a/blockhost.html
+++ b/blockhost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Este es el título atractivo e interesante</h1>
             <p>Y este es un parrafo de inicio</p>
+            <p>Los blogs son la mejor forma de compartir informacion</p>
         </div>
     </div>
 </body>
