--- a/blockhost.html
+++ b/blockhost.html
@@ -10,12 +10,13 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog <span id="tagline">Tu blog de confianza</span>
+            Hyperblog <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante</h1>
             <p>Y este es un parrafo de inicio</p>
             <p>Los blogs son la mejor forma de compartir informacion</p>
+            <p>suscribete y dale like</p>
         </div>
     </div>
 </body>
